--- a/.travis.yml
+++ b/.travis.yml
@@ -35,14 +35,14 @@ matrix:
           php: 7.3
           env:
             - TEST_CMD="vendor/bin/ezbehat --mode=standard --profile=httpCache --suite=symfonycache -c=behat_ibexa_oss.yaml"
-            - WEB_HOST="web"
+            - WEB_HOST="http://web"
             - APP_DEBUG=1
         - name: "PHP 7.3 Varnish integration tests"
           php: 7.3
           env:
             - TEST_CMD="vendor/bin/ezbehat --mode=standard --profile=httpCache --suite=varnish -c=behat_ibexa_oss.yaml"
             - APP_DEBUG=1
-            - WEB_HOST=varnish
+            - WEB_HOST="http://varnish"
             - COMPOSE_FILE="doc/docker/base-dev.yml:doc/docker/varnish.yml:doc/docker/selenium.yml"
         - name: "PHP 7.3 Varnish integration tests with invalidate token"
           php: 7.3
@@ -50,7 +50,7 @@ matrix:
             - TEST_CMD="vendor/bin/ezbehat --mode=standard --profile=httpCache --suite=varnish -c=behat_ibexa_oss.yaml"
             - HTTPCACHE_VARNISH_INVALIDATE_TOKEN=TESTTOKEN
             - APP_DEBUG=1
-            - WEB_HOST=varnish
+            - WEB_HOST="http://varnish"
             - COMPOSE_FILE="doc/docker/base-dev.yml:doc/docker/varnish.yml:doc/docker/selenium.yml"
 
 # test only master + stable (+ Pull requests)
