[Travis] Switched to Flex in test setup

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,4 @@
 dist: xenial
-sudo: required
-
 language: php
 
 cache:
@@ -13,6 +11,7 @@ env:
     - COMPOSE_FILE="doc/docker/base-dev.yml:doc/docker/selenium.yml"
     - APP_ENV=behat
     - USER_RUNNING_TESTS=www-data
+    - PROJECT_VERSION=^3.3.x-dev
 
 matrix:
     fast_finish: true
@@ -22,34 +21,38 @@ matrix:
           env: CHECK_CS=true
         - name: "PHP 7.3 PHPUnit & PHPSpec"
           php: 7.3
+          env: UNIT_TEST=true
         - name: "PHP 7.3 Rest Functional Tests"
           php: 7.3
           env:
-            - TEST_CMD="./bin/.travis/run_rest_tests.sh"
+            - REST_TEST=true
             - APP_DEBUG=1
+            - APP_ENV=dev
             - SYMFONY_CMD="ez:behat:create-language 'pol-PL' 'Polish (polski)'"
             - USER_RUNNING_TESTS=root
             - PHP_IMAGE=ezsystems/php:7.3-v1
+            - WEB_HOST=web
         - name: "PHP 7.3 Symfony Cache integration tests"
           php: 7.3
           env:
-            - TEST_CMD="bin/ezbehat --mode=standard --profile=httpCache --suite=symfonycache"
-            - WEB_HOST="web"
+            - TEST_CMD="vendor/bin/ezbehat --mode=standard --profile=httpCache --suite=symfonycache -c=behat_ibexa_oss.yaml"
+            - WEB_HOST="http://web"
             - APP_DEBUG=1
+            - ENABLE_SYMFONY_CACHE=1
         - name: "PHP 7.3 Varnish integration tests"
           php: 7.3
           env:
-            - TEST_CMD="bin/ezbehat --mode=standard --profile=httpCache --suite=varnish"
+            - TEST_CMD="vendor/bin/ezbehat --mode=standard --profile=httpCache --suite=varnish -c=behat_ibexa_oss.yaml"
             - APP_DEBUG=1
-            - WEB_HOST=varnish
+            - WEB_HOST="http://varnish"
             - COMPOSE_FILE="doc/docker/base-dev.yml:doc/docker/varnish.yml:doc/docker/selenium.yml"
         - name: "PHP 7.3 Varnish integration tests with invalidate token"
           php: 7.3
           env:
-            - TEST_CMD="bin/ezbehat --mode=standard --profile=httpCache --suite=varnish"
+            - TEST_CMD="vendor/bin/ezbehat --mode=standard --profile=httpCache --suite=varnish -c=behat_ibexa_oss.yaml"
             - HTTPCACHE_VARNISH_INVALIDATE_TOKEN=TESTTOKEN
             - APP_DEBUG=1
-            - WEB_HOST=varnish
+            - WEB_HOST="http://varnish"
             - COMPOSE_FILE="doc/docker/base-dev.yml:doc/docker/varnish.yml:doc/docker/selenium.yml"
 
 # test only master + stable (+ Pull requests)
@@ -61,15 +64,17 @@ branches:
 before_script:
     - travis_retry composer selfupdate
     - echo "memory_limit=-1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
-    - if [ "$TEST_CMD" = "" ] ; then travis_retry composer install --prefer-dist --no-interaction ; fi
-    - if [ "$TEST_CMD" != "" ] ; then ./tests/.travis/prepare_for_functional_tests.sh ; fi
+    - travis_retry composer install --prefer-dist --no-interaction
+    - if [ "${TEST_CMD}" != "" ] || [ "${REST_TEST}" != "" ] ; then ./vendor/bin/prepare_project_edition.sh oss ${PROJECT_VERSION} ${COMPOSE_FILE} ; fi
     # Execute Symfony command if injected into test matrix
-    - if [ "${SYMFONY_CMD}" != "" ] ; then cd "$HOME/build/ezplatform"; docker-compose exec --user www-data app sh -c "bin/console ${SYMFONY_CMD}" ; fi
+    - if [ "${SYMFONY_CMD}" != "" ] ; then cd "$HOME/build/project"; docker-compose exec --user www-data app sh -c "APP_ENV=behat php bin/console ${SYMFONY_CMD}" ; fi
+    - if [ "${ENABLE_SYMFONY_CACHE}" != "" ] ; then cd "$HOME/build/project"; docker-compose exec --user www-data app sh -c "patch -p1 -i vendor/ezsystems/ezplatform-http-cache/tests/SymfonyProxy/enable_symfony_proxy.patch" ; fi
 
 script:
-    - if [ "$TEST_CMD" = "" ] && [ "$CHECK_CS" != "true" ] ; then php vendor/bin/phpunit --coverage-text && php vendor/bin/phpspec run --format=pretty ; fi
-    - if [ "$TEST_CMD" != "" ] ; then cd "$HOME/build/ezplatform"; docker-compose exec --user "$USER_RUNNING_TESTS" app sh -c "$TEST_CMD"  ; fi
-    - if [ "$CHECK_CS" = "true" ]; then phpenv config-rm xdebug.ini && ./vendor/bin/php-cs-fixer fix -v --dry-run --diff --show-progress=estimating; fi
+    - if [ "$UNIT_TEST" != "" ] ; then php vendor/bin/phpunit --coverage-text && php vendor/bin/phpspec run --format=pretty ; fi
+    - if [ "$REST_TEST" != "" ] ; then cd "$HOME/build/project"; docker-compose exec app sh -c "cd vendor/ezsystems/ezplatform-rest && composer update && php ./vendor/bin/phpunit -c phpunit-integration-rest.xml" ; fi
+    - if [ "$TEST_CMD" != "" ] ; then cd "$HOME/build/project"; docker-compose exec --user "$USER_RUNNING_TESTS" app sh -c "$TEST_CMD"  ; fi
+    - if [ "$CHECK_CS" != "" ]; then  ./vendor/bin/check_cs.sh; fi
 
 notifications:
   slack:
