--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
     ],
     "require": {
         "php": ">=7.3",
-        "ezsystems/ezplatform-kernel": "^4.0@dev",
-        "ezsystems/ezplatform-rest": "^4.0@dev",
+        "ezsystems/ezplatform-kernel": "^4.0",
+        "ezsystems/ezplatform-rest": "^4.0",
         "friendsofsymfony/http-cache-bundle": "^2.8",
         "friendsofsymfony/http-cache": "^2.9",
         "symfony/http-foundation": "^5.0",
@@ -27,8 +27,8 @@
         "toflar/psr6-symfony-http-cache-store": "^2.2"
     },
     "require-dev": {
-        "ibexa/ci-scripts": "^0.2@dev",
-        "ezsystems/doctrine-dbal-schema": "^4.0@dev",
+        "ibexa/ci-scripts": "^0.2",
+        "ezsystems/doctrine-dbal-schema": "^4.0",
         "phpunit/phpunit": "^8.5",
         "matthiasnoback/symfony-dependency-injection-test": "^4.1",
         "phpspec/phpspec": "^6.1",
