--- a/.travis.yml
+++ b/.travis.yml
@@ -17,10 +17,6 @@ env:
 matrix:
     fast_finish: true
     include:
-        - php: 7.1
-        - php: 7.2
-        - php: 7.3
-          env: CHECK_CS=true
         # Functional
         - php: 7.1
           env: TEST_CMD="bin/behat --profile=rest --tags=~@broken --suite=fullJson" PHP_IMAGE=ezsystems/php:7.1-v1
@@ -36,15 +32,12 @@ branches:
 before_script:
     - travis_retry composer selfupdate
     - echo "memory_limit=-1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
-    - if [ "$TEST_CMD" = "" ] ; then travis_retry composer install --prefer-dist --no-interaction ; fi
-    - if [ "$TEST_CMD" != "" ] ; then ./tests/.travis/prepare_for_functional_tests.sh ; fi
+    - ./tests/.travis/prepare_for_functional_tests.sh
     # Execute Symfony command if injected into test matrix
     - if [ "${SYMFONY_CMD}" != "" ] ; then cd "$HOME/build/ezplatform"; docker-compose exec --user www-data app sh -c "bin/console ${SYMFONY_CMD}" ; fi
 
 script:
-    - if [ "$TEST_CMD" = "" ] ; then php vendor/bin/phpunit --coverage-text && php vendor/bin/phpspec run --format=pretty ; fi
-    - if [ "$TEST_CMD" != "" ] ; then cd "$HOME/build/ezplatform"; docker-compose exec --user www-data app sh -c "$TEST_CMD" ; fi
-    - if [ "$CHECK_CS" = "true" ]; then phpenv config-rm xdebug.ini && ./vendor/bin/php-cs-fixer fix -v --dry-run --diff --show-progress=estimating; fi
+    - cd "$HOME/build/ezplatform"; docker-compose exec --user www-data app sh -c "$TEST_CMD"
 
 notifications:
   slack:
