--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,10 @@
     "require-dev": {
         "phpunit/phpunit": "^6.5.14 || ^7.5.20",
         "matthiasnoback/symfony-dependency-injection-test": "^2.3.1",
-        "phpspec/phpspec": "^5.1.2",
+        "phpspec/phpspec": "^5.1.2 || ^6.1",
         "ezsystems/ezplatform-code-style": "^0.1.0",
         "friendsofphp/php-cs-fixer": "^2.16.1",
-        "memio/spec-gen": "^0.9.0",
+        "memio/spec-gen": "^0.9.0 || ^0.10.0",
         "symfony/phpunit-bridge": "^5.1"
     },
     "autoload": {
