--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -45,7 +45,10 @@ jobs:
           - '7.3'
           - '7.4'
           - '8.0'
-          - '8.1'
+        composer_options: [ "" ]
+        include:
+            - php: '8.1'
+              composer_options: "--ignore-platform-req php"
 
     steps:
       - uses: actions/checkout@v2
@@ -61,6 +64,7 @@ jobs:
       - uses: "ramsey/composer-install@v1"
         with:
           dependency-versions: "highest"
+          composer-options: "${{ matrix.composer_options }}"
 
       - name: Setup problem matchers for PHPUnit
         run: echo "::add-matcher::${{ runner.tool_cache }}/phpunit.json"
