--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-        "php": ">=7.3",
+        "php": "^7.3 || ^8.0",
         "ezsystems/ezplatform-kernel": "^1.3@dev",
         "ezsystems/ezplatform-rest": "^1.0@dev",
         "friendsofsymfony/http-cache-bundle": "^2.8",
@@ -24,14 +24,14 @@
         "symfony/config": "^5.0",
         "psr/http-client": "^1.0",
         "php-http/curl-client": "^2.1",
-        "toflar/psr6-symfony-http-cache-store": "^2.2"
+        "toflar/psr6-symfony-http-cache-store": "^2.2 || ^3.0"
     },
     "require-dev": {
         "ibexa/ci-scripts": "^0.1@dev",
         "ezsystems/doctrine-dbal-schema": "^1.0@dev",
         "phpunit/phpunit": "^8.5",
-        "matthiasnoback/symfony-dependency-injection-test": "^4.1",
-        "phpspec/phpspec": "^6.1",
+        "matthiasnoback/symfony-dependency-injection-test": "^4.3",
+        "phpspec/phpspec": "^7.1",
         "ezsystems/ezplatform-code-style": "^0.1.0",
         "friendsofphp/php-cs-fixer": "^2.16.0",
         "symfony/phpunit-bridge": "^5.1"
