--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-        "ezsystems/ezpublish-kernel": "^7.5@dev",
+        "ezsystems/ezpublish-kernel": "^7.5",
         "friendsofsymfony/http-cache-bundle": "^1.3.16",
         "friendsofsymfony/http-cache": "^1.4.5",
         "symfony/symfony": "^3.4.37"
@@ -42,9 +42,9 @@
     "extra": {
         "_ezplatform_branch_for_behat_tests": "2.5",
         "branch-alias": {
-            "dev-1.0": "1.0.x-dev",
+            "dev-1.0": "1.0",
             "dev-master": "2.0.x-dev",
-            "dev-tmp_ci_branch": "1.0.x-dev"
+            "dev-tmp_ci_branch": "1.0"
         }
     }
 }
