--- a/.travis.yml
+++ b/.travis.yml
@@ -26,31 +26,6 @@ matrix:
             - USER_RUNNING_TESTS=root
             - PHP_IMAGE=ezsystems/php:7.3-v1
             - WEB_HOST=web
-        - name: "PHP 7.3 Symfony Cache integration tests"
-          php: 7.3
-          env:
-            - TEST_CMD="vendor/bin/ezbehat --mode=standard --profile=httpCache --suite=symfonycache -c=behat_ibexa_oss.yaml"
-            - SETUP_CMD="vendor/bin/ezbehat --mode=standard --profile=httpCache --suite=setup -c=behat_ibexa_oss.yaml"
-            - WEB_HOST="http://web"
-            - APP_DEBUG=1
-            - ENABLE_SYMFONY_CACHE=1
-        - name: "PHP 7.3 Varnish integration tests"
-          php: 7.3
-          env:
-            - TEST_CMD="vendor/bin/ezbehat --mode=standard --profile=httpCache --suite=varnish -c=behat_ibexa_oss.yaml"
-            - SETUP_CMD="vendor/bin/ezbehat --mode=standard --profile=httpCache --suite=setup -c=behat_ibexa_oss.yaml"
-            - APP_DEBUG=1
-            - WEB_HOST="http://varnish"
-            - COMPOSE_FILE="doc/docker/base-dev.yml:doc/docker/varnish.yml:doc/docker/selenium.yml"
-        - name: "PHP 7.3 Varnish integration tests with invalidate token"
-          php: 7.3
-          env:
-            - TEST_CMD="vendor/bin/ezbehat --mode=standard --profile=httpCache --suite=varnish -c=behat_ibexa_oss.yaml"
-            - SETUP_CMD="vendor/bin/ezbehat --mode=standard --profile=httpCache --suite=setup -c=behat_ibexa_oss.yaml"
-            - HTTPCACHE_VARNISH_INVALIDATE_TOKEN=TESTTOKEN
-            - APP_DEBUG=1
-            - WEB_HOST="http://varnish"
-            - COMPOSE_FILE="doc/docker/base-dev.yml:doc/docker/varnish.yml:doc/docker/selenium.yml"
 
 # test only master + stable (+ Pull requests)
 branches:
@@ -63,15 +38,10 @@ before_script:
     - echo "memory_limit=-1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
     - travis_retry composer install --prefer-dist --no-interaction
     - ./vendor/bin/prepare_project_edition.sh oss ${PROJECT_VERSION} ${COMPOSE_FILE}
-    # Execute Symfony command if injected into test matrix
-    - if [ "${SYMFONY_CMD}" != "" ] ; then cd "$HOME/build/project"; docker-compose exec --user www-data app sh -c "APP_ENV=behat php bin/console ${SYMFONY_CMD}" ; fi
-    - if [ "${ENABLE_SYMFONY_CACHE}" != "" ] ; then cd "$HOME/build/project"; docker-compose exec --user www-data app sh -c "patch -p1 -i vendor/ezsystems/ezplatform-http-cache/tests/SymfonyProxy/enable_symfony_proxy.patch" ; fi
-    - if [ "$SETUP_CMD" != "" ] ; then cd "$HOME/build/project"; docker-compose exec --user "$USER_RUNNING_TESTS" app sh -c "$SETUP_CMD"  ; fi
-    - if [ "$SETUP_CMD" != "" ] ; then cd "$HOME/build/project"; docker-compose exec --user "$USER_RUNNING_TESTS" app sh -c "composer run post-install-cmd"  ; fi
+    - cd "$HOME/build/project"; docker-compose exec --user www-data app sh -c "APP_ENV=behat php bin/console ${SYMFONY_CMD}"
 
 script:
-    - if [ "$REST_TEST" != "" ] ; then cd "$HOME/build/project"; docker-compose exec app sh -c "cd vendor/ezsystems/ezplatform-rest && composer update --no-interaction && php ./vendor/bin/phpunit -c phpunit-integration-rest.xml" ; fi
-    - if [ "$TEST_CMD" != "" ] ; then cd "$HOME/build/project"; docker-compose exec --user "$USER_RUNNING_TESTS" app sh -c "$TEST_CMD"  ; fi
+    - cd "$HOME/build/project"; docker-compose exec app sh -c "cd vendor/ezsystems/ezplatform-rest && composer update --no-interaction && php ./vendor/bin/phpunit -c phpunit-integration-rest.xml"
 
 notifications:
   slack:
