--- a/behat_suites.yml
+++ b/behat_suites.yml
@@ -19,7 +19,22 @@ httpCache:
             paths:
                 - '%paths.base%/vendor/ezsystems/ezplatform-http-cache/features/varnish'
             filters:
-                tags: '@varnish' 
+                tags: '@varnish&&~@translationAware' 
+            contexts:
+                - EzSystems\Behat\API\Context\TestContext
+                - EzSystems\Behat\API\Context\ContentTypeContext
+                - EzSystems\Behat\Core\Context\TimeContext
+                - EzSystems\Behat\Core\Context\ConfigurationContext
+                - EzSystems\Behat\API\Context\ContentContext
+                - Ibexa\Behat\Browser\Context\BrowserContext
+                - Ibexa\Behat\Browser\Context\AuthenticationContext
+                - Behat\MinkExtension\Context\MinkContext
+                - Ibexa\Behat\Browser\Context\ContentPreviewContext
+        varnish-translation-aware:
+            paths:
+                - '%paths.base%/vendor/ezsystems/ezplatform-http-cache/features/varnish'
+            filters:
+                tags: '@varnish&&~@translationNotAware' 
             contexts:
                 - EzSystems\Behat\API\Context\TestContext
                 - EzSystems\Behat\API\Context\ContentTypeContext
@@ -38,6 +53,7 @@ httpCache:
                 - EzSystems\Behat\API\Context\ContentTypeContext
                 - EzSystems\Behat\Core\Context\ConfigurationContext
                 - EzSystems\Behat\API\Context\ContentContext
+                - EzSystems\Behat\API\Context\LanguageContext
         setup-token:
             paths:
                 - '%paths.base%/vendor/ezsystems/ezplatform-http-cache/features/setup/invalidateToken.feature'
@@ -48,3 +64,8 @@ httpCache:
                 - '%paths.base%/vendor/ezsystems/ezplatform-http-cache/features/setup/symfonyCache.feature'
             contexts:
                 - EzSystems\Behat\Core\Context\FileContext
+        setup-translation-aware:
+            paths:
+                - '%paths.base%/vendor/ezsystems/ezplatform-http-cache/features/setup/translationAware.feature'
+            contexts:
+                - EzSystems\Behat\Core\Context\ConfigurationContext
