[CI] Moved integration tests to Github Actions

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -71,3 +71,7 @@ jobs:
 
       - name: Run test suite
         run: composer run-script --timeout=600 test
+
+  integration-tests:
+      name: "REST integration tests"
+      uses: ezsystems/ezplatform-rest/.github/workflows/integration-tests-callable.yaml@1.3
