[Tests] Divided tests into Varnish 6 and Varnish 7 suites

--- a/.github/workflows/browser-tests.yaml
+++ b/.github/workflows/browser-tests.yaml
@@ -19,14 +19,14 @@ jobs:
             test-setup-phase-2: '--mode=standard --profile=httpCache --suite=setup'
         secrets:
             SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-    varnish:
-        name: "Varnish integration tests"
+    varnish6:
+        name: "Varnish 6 integration tests"
         uses: ibexa/gh-workflows/.github/workflows/browser-tests.yml@main
         with:
             project-edition: 'oss'
             project-version: '^3.3.x-dev'
             setup: "doc/docker/base-dev.yml:doc/docker/varnish.yml:doc/docker/selenium.yml"
-            test-suite:  '--mode=standard --profile=httpCache --suite=varnish'
+            test-suite:  '--mode=standard --profile=httpCache --suite=varnish6'
             test-setup-phase-1: '--mode=standard --profile=httpCache --suite=setup'
         secrets:
             SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
@@ -37,19 +37,19 @@ jobs:
             project-edition: 'oss'
             project-version: '^3.3.x-dev'
             setup: "doc/docker/base-dev.yml:doc/docker/varnish7.yml:doc/docker/selenium.yml"
-            test-suite:  '--mode=standard --profile=httpCache --suite=varnish'
+            test-suite:  '--mode=standard --profile=httpCache --suite=varnish7'
             test-setup-phase-1: '--mode=standard --profile=httpCache --suite=setup'
             ci-scripts-branch: 'IBX-3014'
         secrets:
             SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-    varnish-translation-aware:
+    varnish6-translation-aware:
         name: "Varnish integration tests (translation-aware)"
         uses: ibexa/gh-workflows/.github/workflows/browser-tests.yml@main
         with:
             project-edition: 'oss'
             project-version: '^3.3.x-dev'
             setup: "doc/docker/base-dev.yml:doc/docker/varnish.yml:doc/docker/selenium.yml"
-            test-suite:  '--mode=standard --profile=httpCache --suite=varnish-translation-aware'
+            test-suite:  '--mode=standard --profile=httpCache --suite=varnish6-translation-aware'
             test-setup-phase-1: '--mode=standard --profile=httpCache --suite=setup-translation-aware'
             test-setup-phase-2: '--mode=standard --profile=httpCache --suite=setup'
         secrets:
@@ -61,20 +61,20 @@ jobs:
             project-edition: 'oss'
             project-version: '^3.3.x-dev'
             setup: "doc/docker/base-dev.yml:doc/docker/varnish7.yml:doc/docker/selenium.yml"
-            test-suite:  '--mode=standard --profile=httpCache --suite=varnish-translation-aware'
+            test-suite:  '--mode=standard --profile=httpCache --suite=varnish7-translation-aware'
             test-setup-phase-1: '--mode=standard --profile=httpCache --suite=setup-translation-aware'
             test-setup-phase-2: '--mode=standard --profile=httpCache --suite=setup'
             ci-scripts-branch: 'IBX-3014'
         secrets:
             SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-    varnish-token:
-        name: "Varnish integration tests with invalidate token"
+    varnish6-token:
+        name: "Varnish 6 integration tests with invalidate token"
         uses: ibexa/gh-workflows/.github/workflows/browser-tests.yml@main
         with:
             project-edition: 'oss'
             project-version: '^3.3.x-dev'
             setup: "doc/docker/base-dev.yml:doc/docker/varnish.yml:doc/docker/selenium.yml"
-            test-suite:  '--mode=standard --profile=httpCache --suite=varnish'
+            test-suite:  '--mode=standard --profile=httpCache --suite=varnish6'
             test-setup-phase-1: '--mode=standard --profile=httpCache --suite=setup-token'
             test-setup-phase-2: '--mode=standard --profile=httpCache --suite=setup'
         secrets:
@@ -86,7 +86,7 @@ jobs:
             project-edition: 'oss'
             project-version: '^3.3.x-dev'
             setup: "doc/docker/base-dev.yml:doc/docker/varnish7.yml:doc/docker/selenium.yml"
-            test-suite:  '--mode=standard --profile=httpCache --suite=varnish'
+            test-suite:  '--mode=standard --profile=httpCache --suite=varnish7'
             test-setup-phase-1: '--mode=standard --profile=httpCache --suite=setup-token'
             test-setup-phase-2: '--mode=standard --profile=httpCache --suite=setup'
             ci-scripts-branch: 'IBX-3014'
